# ROS2_Robot

./: .gitignore  README.md  README.txt
config/: cartographer.lua  map.yaml
docs/: NAVIGATION_TEST_FLOW.md
launch/: display.launch.py  full_system.launch.py  gazebo.launch.py  mapping.launch.py  slam.launch.py
maps/: map.pgm  map.yaml
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: aeb_control.launch.py  full_system.launch.py  navigation.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: display.rviz  navigation.rviz
src/robot_description/launch/: display.launch.py
src/robot_description/urdf/: gazebo.xacro  robot.xacro
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/launch/: gazebo.launch.py
src/robot_gazebo/worlds/: robot_world.world
src/robot_navigation/: CMakeLists.txt  nav.launch.py  package.xml
src/robot_navigation/config/: map.pgm  map.yaml  nav2_params.yaml
src/robot_navigation/launch/: nav.launch.py
src/robot_navigation/maps/: map.pgm  map.yaml
src/robot_navigation/scripts/: aeb_keyboard_control.py  auto_initial_pose.py  clean_ros_demo.sh  clear_bonus_visuals.py  nav_to_exit.py  nav_visualizer.py  navigation_smoke_test.sh  planner_compare.py
src/robot_slam/: CMakeLists.txt  package.xml
src/robot_slam/config/: cartographer.lua
src/robot_slam/launch/: slam.launch.py
src/robot_slam/scripts/: map_drive.py
src/ros2_exercises/: CMakeLists.txt  package.xml
src/ros2_exercises/launch/: task1_plot.launch.py  task1_plot_headless.launch.py  task2_tf_demo.launch.py  task2_tf_demo_headless.launch.py
src/ros2_exercises/rviz/: tf_display.rviz
src/ros2_exercises/scripts/: turtle_drive_and_echo.py  turtle_pose_monitor.py
urdf/: gazebo.xacro  materials.xacro  robot.urdf
