<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>机器人整合启动包</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>

  <exec_depend>robot_description</exec_depend>
  <exec_depend>robot_gazebo</exec_depend>
  <exec_depend>robot_slam</exec_depend>
  <exec_depend>robot_navigation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
