cmake_minimum_required(VERSION 3.8)
project(robot_navigation)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclpy REQUIRED)
find_package(nav2_bringup REQUIRED)
find_package(nav2_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(robot_state_publisher REQUIRED)

install(DIRECTORY
  launch
  config
  maps
  scripts
  DESTINATION share/${PROJECT_NAME}
)

install(PROGRAMS
  scripts/aeb_keyboard_control.py
  scripts/auto_initial_pose.py
  scripts/clear_bonus_visuals.py
  scripts/clean_ros_demo.sh
  scripts/nav_visualizer.py
  scripts/nav_to_exit.py
  scripts/planner_compare.py
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
