<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_exercises</name>
  <version>0.1.0</version>
  <description>ROS2 course exercises: rqt_plot turtle pose + TF follow demo</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>turtlesim</exec_depend>
  <exec_depend>turtle_tf2_py</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
